--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "ios:rebuild": "cd ios && rm -rf build && rm -rf Pods && xcodebuild clean && npx pod-install && cd .. && react-native run-ios && osascript -e 'display notification \"REBUILD IOS\" ' "
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^5.1.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "axios": "^0.26.0",
     "babel-plugin-root-import": "^6.6.0",
+    "form-data": "^4.0.0",
     "formik": "^2.2.9",
     "react": "17.0.2",
     "react-native": "0.67.3",
@@ -26,6 +28,7 @@
     "react-native-safe-area-context": "^4.0.1",
     "react-native-screens": "^3.12.0",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-ui-xg": "^0.0.6",
     "react-native-vector-icons": "^9.1.0",
     "styled-components": "^5.3.3",
     "yup": "^0.32.11"
@@ -36,6 +39,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.66.15",
+    "@types/react-native-datepicker": "^1.7.1",
     "@types/react-native-vector-icons": "^6.4.10",
     "@types/react-test-renderer": "^17.0.1",
     "@types/styled-components": "^5.1.23",
